[gd_scene load_steps=37 format=2]

[ext_resource path="res://libraries/Blocks.tres" type="MeshLibrary" id=1]
[ext_resource path="res://libraries/safe_block.tres" type="MeshLibrary" id=2]
[ext_resource path="res://assets/wall_material.tres" type="Material" id=3]
[ext_resource path="res://assets/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/Level 2.gd" type="Script" id=5]
[ext_resource path="res://assets/enemyBalls.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/coin.tscn" type="PackedScene" id=7]

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Player:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -4, 0.776, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "respawn_point"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Player:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -4, 0.776, 0 ) ]
}

[sub_resource type="BoxShape" id=1]
extents = Vector3( 3, 1, 2 )

[sub_resource type="CubeMesh" id=2]

[sub_resource type="BoxShape" id=3]

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1, 0.776, -5 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "ball1"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 0.776, -5 ), Vector3( 1, 0.776, 5 ), Vector3( 1, 0.776, -5 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 3, 0.776, 5 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "ball2"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 3, 0.776, 5 ), Vector3( 3, 0.776, -5 ), Vector3( 3, 0.776, 5 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 5, 0.776, -5 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "ball3"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 5, 0.776, -5 ), Vector3( 5, 0.776, 5 ), Vector3( 5, 0.776, -5 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 7, 0.776, 5 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "ball4"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 7, 0.776, 5 ), Vector3( 7, 0.776, -5 ), Vector3( 7, 0.776, 5 ) ]
}

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 9, 0.776, -5 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "ball5"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 9, 0.776, -5 ), Vector3( 9, 0.776, 5 ), Vector3( 9, 0.776, -5 ) ]
}

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 11, 0.776, 5 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "ball6"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 11, 0.776, 5 ), Vector3( 11, 0.776, -5 ), Vector3( 11, 0.776, 5 ) ]
}

[sub_resource type="Animation" id=18]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 13, 0.776, -5 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "ball7"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 13, 0.776, -5 ), Vector3( 13, 0.776, 5 ), Vector3( 13, 0.776, -5 ) ]
}

[sub_resource type="Animation" id=20]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 15, 0.776, 5 ) ]
}

[sub_resource type="Animation" id=21]
resource_name = "ball8"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 15, 0.776, 5 ), Vector3( 15, 0.776, -5 ), Vector3( 15, 0.776, 5 ) ]
}

[sub_resource type="Animation" id=22]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 17, 0.776, -5 ) ]
}

[sub_resource type="Animation" id=23]
resource_name = "ball9"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 17, 0.776, -5 ), Vector3( 17, 0.776, 5 ), Vector3( 17, 0.776, -5 ) ]
}

[sub_resource type="Animation" id=24]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 19, 0.776, 5 ) ]
}

[sub_resource type="Animation" id=25]
resource_name = "ball10"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 19, 0.776, 5 ), Vector3( 19, 0.776, -5 ), Vector3( 19, 0.776, 5 ) ]
}

[sub_resource type="Animation" id=26]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 21, 0.776, -5 ) ]
}

[sub_resource type="Animation" id=27]
resource_name = "ball11"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 21, 0.776, -5 ), Vector3( 21, 0.776, 5 ), Vector3( 21, 0.776, -5 ) ]
}

[sub_resource type="Animation" id=28]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 23, 0.776, 5 ) ]
}

[sub_resource type="Animation" id=29]
resource_name = "ball12"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 23, 0.776, 5 ), Vector3( 23, 0.776, -5 ), Vector3( 23, 0.776, 5 ) ]
}

[node name="Level 2" type="Spatial"]
script = ExtResource( 5 )

[node name="respawn" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/respawn_point = SubResource( 5 )

[node name="blocks" type="GridMap" parent="."]
mesh_library = ExtResource( 1 )
data = {
"cells": PoolIntArray( -65536, 0, 0, -65535, 0, 1, -65534, 0, 0, -65533, 0, 1, -65532, 0, 0, -65531, 0, 1, -65530, 0, 0, -65529, 0, 1, -65528, 0, 0, -65527, 0, 1, -65526, 0, 0, -65525, 0, 1, -65536, 1, 1, -65535, 1, 0, -65534, 1, 1, -65533, 1, 0, -65532, 1, 1, -65531, 1, 0, -65530, 1, 1, -65529, 1, 0, -65528, 1, 1, -65527, 1, 0, -65526, 1, 1, -65525, 1, 0, -65536, 2, 0, -65535, 2, 1, -65534, 2, 0, -65533, 2, 1, -65532, 2, 0, -65531, 2, 1, -65530, 2, 0, -65529, 2, 1, -65528, 2, 0, -65527, 2, 1, -65526, 2, 0, -65525, 2, 1, -65536, 65533, 1, -65535, 65533, 0, -65534, 65533, 1, -65533, 65533, 0, -65532, 65533, 1, -65531, 65533, 0, -65530, 65533, 1, -65529, 65533, 0, -65528, 65533, 1, -65527, 65533, 0, -65526, 65533, 1, -65525, 65533, 0, -65536, 65534, 0, -65535, 65534, 1, -65534, 65534, 0, -65533, 65534, 1, -65532, 65534, 0, -65531, 65534, 1, -65530, 65534, 0, -65529, 65534, 1, -65528, 65534, 0, -65527, 65534, 1, -65526, 65534, 0, -65525, 65534, 1, -65536, 65535, 1, -65535, 65535, 0, -65534, 65535, 1, -65533, 65535, 0, -65532, 65535, 1, -65531, 65535, 0, -65530, 65535, 1, -65529, 65535, 0, -65528, 65535, 1, -65527, 65535, 0, -65526, 65535, 1, -65525, 65535, 0 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, -1, 0 )
}

[node name="safe" type="Spatial" parent="."]

[node name="safe" type="GridMap" parent="safe"]
mesh_library = ExtResource( 2 )
data = {
"cells": PoolIntArray( -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -3, 0, 0, -2, 0, 0, -1, 0, 0, -65524, 65535, 0, -65523, 65535, 0, -65522, 65535, 0, -3, 65535, 0, -2, 65535, 0, -1, 65535, 0 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, -1, 0 )
}

[node name="goal" type="Area" parent="safe"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 27, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="safe/goal"]
shape = SubResource( 1 )

[node name="walls" type="Spatial" parent="."]

[node name="wall1" type="StaticBody" parent="walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 2, -7, 0, 0 )

[node name="MeshInstance" type="MeshInstance" parent="walls/wall1"]
mesh = SubResource( 2 )
material/0 = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall1"]
shape = SubResource( 3 )

[node name="wall12" type="StaticBody" parent="walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 2, 31, 0, 0 )

[node name="MeshInstance" type="MeshInstance" parent="walls/wall12"]
mesh = SubResource( 2 )
material/0 = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall12"]
shape = SubResource( 3 )

[node name="wall2" type="StaticBody" parent="walls"]
transform = Transform( -4.37114e-08, 0, -4, 0, 1, 0, 1, 0, -1.74846e-07, -4, 0, -3 )

[node name="MeshInstance" type="MeshInstance" parent="walls/wall2"]
mesh = SubResource( 2 )
material/0 = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall2"]
shape = SubResource( 3 )

[node name="wall3" type="StaticBody" parent="walls"]
transform = Transform( -4.37114e-08, 0, -4, 0, 1, 0, 1, 0, -1.74846e-07, -4, 0, 3 )

[node name="MeshInstance" type="MeshInstance" parent="walls/wall3"]
mesh = SubResource( 2 )
material/0 = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall3"]
shape = SubResource( 3 )

[node name="wall10" type="StaticBody" parent="walls"]
transform = Transform( -4.37114e-08, 0, -4, 0, 1, 0, 1, 0, -1.74846e-07, 28, 0, 3 )

[node name="MeshInstance" type="MeshInstance" parent="walls/wall10"]
mesh = SubResource( 2 )
material/0 = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall10"]
shape = SubResource( 3 )

[node name="wall11" type="StaticBody" parent="walls"]
transform = Transform( -4.37114e-08, 0, -4, 0, 1, 0, 1, 0, -1.74846e-07, 28, 0, -3 )

[node name="MeshInstance" type="MeshInstance" parent="walls/wall11"]
mesh = SubResource( 2 )
material/0 = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall11"]
shape = SubResource( 3 )

[node name="wall4" type="StaticBody" parent="walls"]
transform = Transform( -1, 0, 4.52987e-07, 0, 1, 0, -1.50996e-07, 0, -3, -1, 0, 5 )

[node name="MeshInstance" type="MeshInstance" parent="walls/wall4"]
mesh = SubResource( 2 )
material/0 = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall4"]
shape = SubResource( 3 )

[node name="wall7" type="StaticBody" parent="walls"]
transform = Transform( -1, 0, 4.52987e-07, 0, 1, 0, -1.50996e-07, 0, -3, -1, 0, -5 )

[node name="MeshInstance" type="MeshInstance" parent="walls/wall7"]
mesh = SubResource( 2 )
material/0 = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall7"]
shape = SubResource( 3 )

[node name="wall8" type="StaticBody" parent="walls"]
transform = Transform( -1, 0, 4.52987e-07, 0, 1, 0, -1.50996e-07, 0, -3, 25, 0, -5 )

[node name="MeshInstance" type="MeshInstance" parent="walls/wall8"]
mesh = SubResource( 2 )
material/0 = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall8"]
shape = SubResource( 3 )

[node name="wall9" type="StaticBody" parent="walls"]
transform = Transform( -1, 0, 4.52987e-07, 0, 1, 0, -1.50996e-07, 0, -3, 25, 0, 5 )

[node name="MeshInstance" type="MeshInstance" parent="walls/wall9"]
mesh = SubResource( 2 )
material/0 = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall9"]
shape = SubResource( 3 )

[node name="wall5" type="StaticBody" parent="walls"]
transform = Transform( -1.62921e-07, 0, -12, 0, 1, 0, 1, 0, -1.95505e-06, 12, 0, 7 )

[node name="MeshInstance" type="MeshInstance" parent="walls/wall5"]
mesh = SubResource( 2 )
material/0 = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall5"]
shape = SubResource( 3 )

[node name="wall6" type="StaticBody" parent="walls"]
transform = Transform( -1.62921e-07, 0, -12, 0, 1, 0, 1, 0, -1.95505e-06, 12, 0, -7 )

[node name="MeshInstance" type="MeshInstance" parent="walls/wall6"]
mesh = SubResource( 2 )
material/0 = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall6"]
shape = SubResource( 3 )

[node name="coins" type="Spatial" parent="."]

[node name="coin" parent="coins" instance=ExtResource( 7 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 12, 0.776, 0 )

[node name="Player" parent="." instance=ExtResource( 4 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, -4, 0.776, 0 )

[node name="InterpolatedCamera" type="InterpolatedCamera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 12, 15, 13 )

[node name="enimies" type="Spatial" parent="."]

[node name="enemyBalls" parent="enimies" instance=ExtResource( 6 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 1, 0.776, -5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="enimies/enemyBalls"]
autoplay = "ball1"
anims/RESET = SubResource( 7 )
anims/ball1 = SubResource( 6 )

[node name="enemyBalls2" parent="enimies" instance=ExtResource( 6 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 3, 0.776, 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="enimies/enemyBalls2"]
autoplay = "ball2"
anims/RESET = SubResource( 8 )
anims/ball2 = SubResource( 9 )

[node name="enemyBalls3" parent="enimies" instance=ExtResource( 6 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 5, 0.776, -5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="enimies/enemyBalls3"]
autoplay = "ball3"
anims/RESET = SubResource( 10 )
anims/ball3 = SubResource( 11 )

[node name="enemyBalls4" parent="enimies" instance=ExtResource( 6 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 7, 0.776, 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="enimies/enemyBalls4"]
autoplay = "ball4"
anims/RESET = SubResource( 12 )
anims/ball4 = SubResource( 13 )

[node name="enemyBalls5" parent="enimies" instance=ExtResource( 6 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 9, 0.776, -5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="enimies/enemyBalls5"]
autoplay = "ball5"
anims/RESET = SubResource( 14 )
anims/ball5 = SubResource( 15 )

[node name="enemyBalls6" parent="enimies" instance=ExtResource( 6 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 11, 0.776, 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="enimies/enemyBalls6"]
autoplay = "ball6"
anims/RESET = SubResource( 16 )
anims/ball6 = SubResource( 17 )

[node name="enemyBalls7" parent="enimies" instance=ExtResource( 6 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 13, 0.776, -5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="enimies/enemyBalls7"]
autoplay = "ball7"
anims/RESET = SubResource( 18 )
anims/ball7 = SubResource( 19 )

[node name="enemyBalls8" parent="enimies" instance=ExtResource( 6 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 15, 0.776, 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="enimies/enemyBalls8"]
autoplay = "ball8"
anims/RESET = SubResource( 20 )
anims/ball8 = SubResource( 21 )

[node name="enemyBalls9" parent="enimies" instance=ExtResource( 6 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 17, 0.776, -5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="enimies/enemyBalls9"]
autoplay = "ball9"
anims/RESET = SubResource( 22 )
anims/ball9 = SubResource( 23 )

[node name="enemyBalls10" parent="enimies" instance=ExtResource( 6 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 19, 0.776, 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="enimies/enemyBalls10"]
autoplay = "ball10"
anims/RESET = SubResource( 24 )
anims/ball10 = SubResource( 25 )

[node name="enemyBalls11" parent="enimies" instance=ExtResource( 6 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 21, 0.776, -5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="enimies/enemyBalls11"]
autoplay = "ball11"
anims/RESET = SubResource( 26 )
anims/ball11 = SubResource( 27 )

[node name="enemyBalls12" parent="enimies" instance=ExtResource( 6 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 23, 0.776, 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="enimies/enemyBalls12"]
autoplay = "ball12"
anims/RESET = SubResource( 28 )
anims/ball12 = SubResource( 29 )

[connection signal="reset_level" from="." to="coins/coin" method="_on_Level_2_reset_level"]
[connection signal="body_entered" from="safe/goal" to="." method="_on_goal_body_entered"]
[connection signal="coin_collect" from="coins/coin" to="." method="_on_coin_coin_collect"]
[connection signal="body_entered" from="enimies/enemyBalls" to="." method="_on_enemyBalls_body_entered"]
[connection signal="body_entered" from="enimies/enemyBalls2" to="." method="_on_enemyBalls_body_entered"]
[connection signal="body_entered" from="enimies/enemyBalls3" to="." method="_on_enemyBalls_body_entered"]
[connection signal="body_entered" from="enimies/enemyBalls4" to="." method="_on_enemyBalls_body_entered"]
[connection signal="body_entered" from="enimies/enemyBalls5" to="." method="_on_enemyBalls_body_entered"]
[connection signal="body_entered" from="enimies/enemyBalls6" to="." method="_on_enemyBalls_body_entered"]
[connection signal="body_entered" from="enimies/enemyBalls7" to="." method="_on_enemyBalls_body_entered"]
[connection signal="body_entered" from="enimies/enemyBalls8" to="." method="_on_enemyBalls_body_entered"]
[connection signal="body_entered" from="enimies/enemyBalls9" to="." method="_on_enemyBalls_body_entered"]
[connection signal="body_entered" from="enimies/enemyBalls10" to="." method="_on_enemyBalls_body_entered"]
[connection signal="body_entered" from="enimies/enemyBalls11" to="." method="_on_enemyBalls_body_entered"]
[connection signal="body_entered" from="enimies/enemyBalls12" to="." method="_on_enemyBalls_body_entered"]
